--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
 script:
-    - pytest --cov --cov-report term-missing
+    - pytest --doctest-modules --cov --cov-report term-missing
 after_success:
     - coveralls
